--- a/notebooks/1_pytorch_reg.ipynb
+++ b/notebooks/1_pytorch_reg.ipynb
@@ -932,7 +932,7 @@
    "outputs": [],
    "source": [
     "# Stop the Docker container\n",
-    "# docker stop adv_dsi_lab_5"
+    "docker stop adv_dsi_lab_5"
    ]
   }
  ],
