pytorch regression heading

--- a/notebooks/1_pytorch_reg.ipynb
+++ b/notebooks/1_pytorch_reg.ipynb
@@ -914,7 +914,7 @@
     "git pull\n",
     "\n",
     "# Check out to the `pytorch_reg` branch\n",
-    "git checkout pytorch_reg\n",
+    "git checkout pytorch_reg_2\n",
     "\n",
     "# Merge the master branch and push your changes\n",
     "git merge master --allow-unrelated-histories\n",
