--- a/notebooks/1_pytorch_regression.ipynb
+++ b/notebooks/1_pytorch_regression.ipynb
@@ -20,9 +20,179 @@
     "6.   Create Data Loader\n",
     "7.   Train Model\n",
     "8.   Assess Performance\n",
-    "9.   Push Changes\n",
+    "9.   Push Changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Setup Repository\n",
     "\n",
-    "### 2.   Load and Explore Dataset"
+    "**[1.1]** Go to a folder of your choice on your computer (where you store projects)\n",
+    "\n",
+    "**[1.2]** Copy the cookiecutter data science template\n",
+    "- Follow the prompt (name the project and repo adv_dsi_lab_5)\n",
+    "\n",
+    "**[1.3]** Go inside the created folder `adv_dsi_lab_5`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go to a folder of your choice on your computer (where you store projects)\n",
+    "cd ~/Projects/\n",
+    "\n",
+    "# Copy the cookiecutter data science template\n",
+    "cookiecutter -c v1 https://github.com/drivendata/cookiecutter-data-science\n",
+    "    \n",
+    "# Go inside the created folder adv_dsi_lab_5\n",
+    "cd adv_dsi_lab_5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1.4]** Create a file called `Dockerfile` and add the following content:\n",
+    "\n",
+    "`FROM jupyter/scipy-notebook:0ce64578df46`\n",
+    "\n",
+    "`RUN pip install torch==1.9.0+cpu torchvision==0.10.0+cpu torchtext==0.10.0 -f https://download.pytorch.org/whl/torch_stable.html`\n",
+    "\n",
+    "`ENV PYTHONPATH \"${PYTHONPATH}:/home/jovyan/work\"`\n",
+    "\n",
+    "`RUN echo \"export PYTHONPATH=/home/jovyan/work\" >> ~/.bashrc`\n",
+    "\n",
+    "`WORKDIR /home/jovyan/work`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1.5]** Build the image from this Dockerfile\n",
+    "\n",
+    "**[1.6]** Run the built image\n",
+    "\n",
+    "**[1.7]** Display last 50 lines of logs\n",
+    "- Copy the url displayed and paste it to a browser in order to launch Jupyter Lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the image from this Dockerfile\n",
+    "docker build -t pytorch-notebook:latest .\n",
+    "    \n",
+    "# Run the built image\n",
+    "docker run  -dit --rm --name adv_dsi_lab_5 -p 8888:8888 -e JUPYTER_ENABLE_LAB=yes \n",
+    "-v ~/Projects/adv_dsi/adv_dsi_lab_5:/home/jovyan/work \n",
+    "-v ~/Projects/adv_dsi/src:/home/jovyan/work/src \n",
+    "-v ~/Projects/adv_dsi/data:/home/jovyan/work/data \n",
+    "pytorch-notebook:latest  \n",
+    "    \n",
+    "# Display last 50 lines of logs\n",
+    "docker logs --tail 50 adv_dsi_lab_5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1.8]** Initialise the repo\n",
+    "\n",
+    "**[1.9]** Login into Github with your account (https://github.com/) and create a public repo with the name `adv_dsi_lab_5`\n",
+    "\n",
+    "**[1.10]** In your local repo `adv_dsi_lab_5`, link it with Github (replace the url with your username)\n",
+    "\n",
+    "**[1.11]** Add your changes to git staging area and commit them\n",
+    "\n",
+    "**[1.12]** Push your master branch to origin\n",
+    "\n",
+    "**[1.13]** Preventing push to `master` branch\n",
+    "\n",
+    "**[1.14]** Create a new git branch called `pytorch_reg`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "# Initialise the repo\n",
+    "git init\n",
+    "\n",
+    "# Login into Github with your account (https://github.com/) \n",
+    "# and create a public repo with the name `adv_dsi_lab_5`\n",
+    "\n",
+    "# Link repo with Github\n",
+    "git remote add origin git@github.com:CazMayhem/adv_dsi_lab_1_5.git\n",
+    "\n",
+    "# Add your changes to git staging area and commit them\n",
+    "git add .\n",
+    "git commit -m \"init\"\n",
+    "\n",
+    "# Push your master branch to origin\n",
+    "git push https://<insert_pat>@github.com/CazMayhem/adv_dsi_lab_5.git --set-upstream origin master\n",
+    "\n",
+    "# Preventing push to master branch\n",
+    "git config branch.master.pushRemote no_push\n",
+    "\n",
+    "# Create a new git branch called pytorch_reg\n",
+    "git checkout -b pytorch_reg\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.   Load and Explore Dataset\n",
+    "**[2.1]** Download the dataset into the `data/raw` folder:https://code.datasciencedojo.com/datasciencedojo/datasets/raw/master/Beijing%20PM2.5/PRSA_data_2010.1.1-2014.12.31.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-03-19 00:14:47--  https://code.datasciencedojo.com/datasciencedojo/datasets/raw/master/Beijing%20PM2.5/PRSA_data_2010.1.1-2014.12.31.csv\n",
+      "Resolving code.datasciencedojo.com (code.datasciencedojo.com)... 167.99.111.153\n",
+      "Connecting to code.datasciencedojo.com (code.datasciencedojo.com)|167.99.111.153|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1966669 (1.9M) [text/plain]\n",
+      "Saving to: ‘../data/raw/PRSA_data_2010.1.1-2014.12.31.csv.1’\n",
+      "\n",
+      "PRSA_data_2010.1.1- 100%[===================>]   1.88M  1.39MB/s    in 1.3s    \n",
+      "\n",
+      "2022-03-19 00:14:50 (1.39 MB/s) - ‘../data/raw/PRSA_data_2010.1.1-2014.12.31.csv.1’ saved [1966669/1966669]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -P ../data/raw https://code.datasciencedojo.com/datasciencedojo/datasets/raw/master/Beijing%20PM2.5/PRSA_data_2010.1.1-2014.12.31.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[2.2]** Launch the magic commands for auto-relaoding external modules"
    ]
   },
   {
@@ -36,12 +206,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[2.3]** Import the pandas and numpy packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solution\n",
+    "# import the pandas and numpy packages\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -187,8 +364,10 @@
     }
    ],
    "source": [
-    "#Solution:\n",
+    "# Load the data in a dataframe called df\n",
     "df = pd.read_csv('../data/raw/PRSA_data_2010.1.1-2014.12.31.csv')\n",
+    "\n",
+    "# Display the first 5 rows of df\n",
     "df.head()"
    ]
   },
@@ -209,6 +388,7 @@
     }
    ],
    "source": [
+    "# Display the dimensions (shape) of df\n",
     "df.shape"
    ]
   },
@@ -243,7 +423,7 @@
     }
    ],
    "source": [
-    "# Solution\n",
+    "# Display the summary (info) of df\n",
     "df.info()"
    ]
   },
@@ -450,7 +630,7 @@
     }
    ],
    "source": [
-    "# Solution\n",
+    "# isplay the descriptive statictics of df\n",
     "df.describe()"
    ]
   },
@@ -476,16 +656,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Create a copy of df and save it into a variable called df_cleaned\n",
     "df_cleaned = df.copy()\n",
     "\n",
-    "# Solution\n",
+    "# Remove the column No as it is an identifier for rows\n",
     "df_cleaned.drop('No', axis=1, inplace=True)\n",
     "\n",
-    "# Solution\n",
+    "# Remove the missing values from the target variable pm2.5\n",
     "df_cleaned.dropna(inplace=True)\n",
     "\n",
-    "# Solution\n",
+    "# Reset the indexes of the dataframe\n",
     "df_cleaned.reset_index(drop=True, inplace=True)"
    ]
   },
@@ -506,13 +686,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Import StandardScaler and OneHotEncoder from sklearn.preprocessing\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "\n",
-    "# Solution\n",
+    "# Create a list called num_cols that contains year, DEWP, TEMP, PRES, Iws, Is, Ir\n",
     "num_cols = ['year', 'DEWP', 'TEMP', 'PRES', 'Iws', 'Is', 'Ir']\n",
     "\n",
-    "# Solution\n",
+    "# Instantiate a StandardScaler and called it sc\n",
     "sc = StandardScaler()"
    ]
   },
@@ -522,9 +702,7 @@
    "source": [
     "**[3.8]** Fit and transform the numeric feature of `df_cleaned` and replace the data into it\n",
     "\n",
-    "**[3.9]** Create a list called `cat_cols` that contains `month`, `day`, `hour`, `cbwd`\n",
-    "\n",
-    "**[3.10]** Instantiate a `OneHotEncoder` and called it `ohe`"
+    "**[3.9]** Create a list called `cat_cols` that contains `month`, `day`, `hour`, `cbwd`"
    ]
   },
   {
@@ -533,20 +711,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Fit and transform the numeric feature of X_train_cleaned and replace the data into it\n",
     "df_cleaned[num_cols] = sc.fit_transform(df_cleaned[num_cols])\n",
     "\n",
-    "# Solution\n",
-    "cat_cols = ['month', 'day', 'hour', 'cbwd']\n",
-    "\n",
-    "# Solution\n",
-    "ohe = OneHotEncoder(sparse=False)"
+    "# Create a list called cat_cols that contains Gender\n",
+    "cat_cols = ['month', 'day', 'hour', 'cbwd']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**[3.10]** Instantiate a `OneHotEncoder` and called it `ohe`\n",
+    "\n",
     "**[3.11]** Perform One-Hot encoding on `cat_cols` and save them into a dataframe called `X_cat`\n",
     "\n",
     "**[3.12]** Extract the feature names from `ohe` and replace the names of the columns of the `X_cat`\n",
@@ -560,13 +737,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Instantiate a OneHotEncoder and called it ohe\n",
+    "ohe = OneHotEncoder(sparse=False)\n",
+    "\n",
+    "# Perform One-Hot encoding on cat_cols and save them into a dataframe called X_cat\n",
     "X_cat = pd.DataFrame(ohe.fit_transform(df_cleaned[cat_cols]))\n",
     "\n",
-    "# Solution\n",
+    "# Extract the feature names from ohe and replace the names of the columns of the X_cat\n",
     "X_cat.columns = ohe.get_feature_names(cat_cols)\n",
     "\n",
-    "# Solution\n",
+    "# Drop the original columns of cat_cols from df_cleaned\n",
     "df_cleaned.drop(cat_cols, axis=1, inplace=True)"
    ]
   },
@@ -587,13 +767,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Concatenate df_cleaned with X_cat and save the result to a variable called X\n",
     "X = pd.concat([df_cleaned, X_cat], axis=1)\n",
     "\n",
-    "# Solution\n",
+    "# Import train_test_split from sklearn.model_selection\n",
     "from src.data.sets import split_sets_by_time, save_sets\n",
     "\n",
-    "# Solution\n",
+    "# Split the data into training and testing sets with 80-20 ratio\n",
     "X_train, y_train, X_val, y_val, X_test, y_test = split_sets_by_time(X, target_col='pm2.5', test_ratio=0.2)"
    ]
   },
@@ -620,6 +800,7 @@
     }
    ],
    "source": [
+    "# create the following folder: data/processed/beijing_pollution\n",
     "!mkdir ../data/processed\n",
     "!mkdir ../data/processed/beijing_pollution"
    ]
@@ -638,7 +819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "# Save the sets in the data/processed/beijing_pollution folder\n",
     "save_sets(X_train=X_train, y_train=y_train, X_val=X_val, y_val=y_val, X_test=X_test, y_test=y_test, \n",
     "          path='../data/processed/beijing_pollution/')"
    ]
@@ -673,17 +854,18 @@
     }
    ],
    "source": [
-    "# Solution\n",
+    "# Import NullModel from src.models.null\n",
     "from src.models.null import NullModel\n",
     "\n",
-    "# Solution:\n",
+    "# Instantiate a NullModel and call .fit_predict() on the training target \n",
+    "# to extract your predictions into a variable called y_base\n",
     "baseline_model = NullModel()\n",
     "y_base = baseline_model.fit_predict(y_train)\n",
     "\n",
-    "# Solution:\n",
+    "# Import print_reg_perf from src.models.performance\n",
     "from src.models.performance import print_class_perf\n",
     "\n",
-    "# Solution:\n",
+    "# Print the regression metrics for this baseline model\n",
     "print_reg_perf(y_base, y_train, set_name='Training')"
    ]
   },
@@ -695,10 +877,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "**[5.1]** Import `torch`, `torch.nn` as `nn` and `torch.nn.functional` as `F`\n",
     "\n",
@@ -727,16 +907,17 @@
     }
    ],
    "source": [
-    "# Solution:\n",
+    "# Import torch and torch.nn as nn\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "# Solution:\n",
+    "# Instantiate PytorchRegression with the correct number of input feature and save it into a variable called model\n",
     "from src.models.pytorch import PytorchRegression\n",
     "\n",
     "model = PytorchRegression(X_train.shape[1])\n",
     "\n",
+    "# Set model to use the device available\n",
     "from src.models.pytorch import get_device\n",
     "\n",
     "device = get_device()\n",
@@ -760,10 +941,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution:\n",
+    "# Import Dataset and DataLoader from torch.utils.data\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "# Solution:\n",
+    "# Import this class from src/models/pytorch and convert all sets to PytorchDataset\n",
     "from src.models.pytorch import PytorchDataset\n",
     "\n",
     "train_dataset = PytorchDataset(X=X_train, y=y_train)\n",
@@ -790,13 +971,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution:\n",
+    "# Instantiate a nn.MSELoss() and save it into a variable called criterion\n",
     "criterion = nn.MSELoss()\n",
     "\n",
-    "# Solution:\n",
+    "# Instantiate a torch.optim.Adam() optimizer with the model's parameters and 0.001 as learning rate \n",
+    "# and save it into a variable called optimizer\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Solution:\n",
+    "# Variables N_EPOCHS and BATCH_SIZE that will take respectively 5 and 32 as values\n",
     "N_EPOCHS = 5\n",
     "BATCH_SIZE = 32"
    ]
@@ -846,7 +1028,8 @@
     }
    ],
    "source": [
-    "# Solution:\n",
+    "# Create a for loop that will iterate through the specified number of epochs and will train the model \n",
+    "# with the training set and assess the performance on the validation set and print their scores\n",
     "from src.models.pytorch import train_regression, test_regression\n",
     "\n",
     "for epoch in range(N_EPOCHS):\n",
@@ -871,7 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution\n",
+    "# Save the model into the models folder\n",
     "torch.save(model, \"../models/pytorch_reg_pm2_5.pt\")"
    ]
   },
@@ -898,6 +1081,7 @@
     }
    ],
    "source": [
+    "# Assess the model performance on the testing set and print its scores\n",
     "test_loss, test_rmse = test_regression(test_dataset, model=model, criterion=criterion, batch_size=BATCH_SIZE, device=device)\n",
     "print(f'\\tLoss: {test_loss:.4f}\\t|\\tRMSE: {test_rmse:.1f}')"
    ]
@@ -916,29 +1100,28 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "# Add you changes to git staging area\n",
+    "# Add your changes to git staging area\n",
     "git add .\n",
     "\n",
     "# Create the snapshot of your repository and add a description\n",
     "git commit -m \"pytorch regression\"\n",
     "\n",
     "# Push your snapshot to Github\n",
-    "git push\n",
+    "git push https://<insert_pat>@github.com/CazMayhem/adv_dsi_lab_5.git\n",
     "\n",
     "# Check out to the master branch\n",
     "git checkout master\n",
     "\n",
     "# Pull the latest updates\n",
-    "git pull\n",
+    "git pull https://<insert_pat>@github.com/CazMayhem/adv_dsi_lab_5.git\n",
     "\n",
-    "# Check out to the `pytorch_reg` branch\n",
-    "git checkout pytorch_reg_2\n",
+    "# Merge the branch pytorch_reg\n",
+    "git checkout pytorch_reg\n",
     "\n",
-    "# Merge the master branch and push your changes\n",
-    "git merge master --allow-unrelated-histories\n",
-    "git push\n",
-    "\n",
-    "# Go to Github and merge the branch after reviewing the code and fixing any conflict\n",
+    "# Merge the master branch and push your changes, \n",
+    "# any merge issues use:  git merge master --allow-unrelated-histories\n",
+    "git merge master \n",
+    "git push https://<insert_pat>@github.com/CazMayhem/adv_dsi_lab_5.git\n",
     "\n",
     "\"\"\""
    ]
