--- a/notebooks/2_pytorch_binary.ipynb
+++ b/notebooks/2_pytorch_binary.ipynb
@@ -25,6 +25,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Setup Repository\n",
+    "\n",
+    "**[1.1]** Go inside the created folder `adv_dsi_lab_5`\n",
+    "\n",
+    "**[1.2]** Create a new git branch called `pytorch_bin_class`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go inside the created folder `adv_dsi_lab_5`\n",
+    "cd adv_dsi_lab_5\n",
+    "\n",
+    "# Create a new git branch called pytorch_bin_class\n",
+    "git checkout -b pytorch_bin_class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1.2]** Run the built image\n",
+    "\n",
+    "**[1.3]** Display last 50 lines of logs\n",
+    "- Copy the url displayed and paste it to a browser in order to launch Jupyter Lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the built image\n",
+    "docker run  -dit --rm --name adv_dsi_lab_5 -p 8888:8888 -e JUPYTER_ENABLE_LAB=yes \n",
+    "-v ~/Projects/adv_dsi/adv_dsi_lab_5:/home/jovyan/work \n",
+    "-v ~/Projects/adv_dsi/src:/home/jovyan/work/src \n",
+    "-v ~/Projects/adv_dsi/data:/home/jovyan/work/data \n",
+    "pytorch-notebook:latest \n",
+    "\n",
+    "# Display last 50 lines of logs\n",
+    "docker logs --tail 50 adv_dsi_lab_5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Load and Explore Dataset\n",
     "\n",
     "**[2.1]** Download the dataset into the `data/raw` folder: https://code.datasciencedojo.com/datasciencedojo/datasets/raw/master/Default%20of%20Credit%20Card%20Clients/default%20of%20credit%20card%20clients.csv\n"
